@@ -5,14 +5,11 @@ logclean=0
 lastfile=t/_DBDIR/lastid.txt
 
 
-; CPANSTATS (MySQL version) database configuration
+; database configuration
 
 [CPANSTATS]
-driver=mysql
-database=cpanstats
-dbhost=localhost
-dbuser=dandan
-dbpass=d4nd4n
+driver=SQLite
+database=t/_DBDIR/test.db
 
 
 [BACKUPS]
