@@ -9,6 +9,7 @@ Revision history for Perl distribution CPAN-Testers-Data-Addresses
         - added minimum perl version (5.006).
         - reworked Makefile.PL for clarity.
         - test suite updates.
+        - added support for writing to named output file.
 
 0.07    2012-04-08
         - fixed POD error in supplementary script.
